package com.github.setvizan.coworkingspace.model.enumerate;

public enum BookingType {
    MORNING,
    AFTERNOON,
    DAY
}
