package com.github.setvizan.coworkingspace.model.enumerate;

public enum Status {
    APPROVED,
    DECLINED,
    PENDING
}
